Menu fixes: - Make profile editor more visible in menu - Add missing split

--- a/public/css/joomla.css
+++ b/public/css/joomla.css
@@ -415,7 +415,7 @@ table.adminheading th.Peering {
 }
 
 table.adminheading th.profile {
-    background: url(../images/joomla-admin/gaim.png) no-repeat left;
+    background: url(../images/joomla-admin/personal.png) no-repeat left;
 }
 
 table.adminheading th.Provision {
